# cothread

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  COMPARISON.md  README.md  SPEC.md  TEST_RESULTS.md  perf.data  perf.data.old  run_simple_test.ps1  simple_mutex_test.cpp
.claude/: settings.local.json
benchmark/: CMakeLists.txt  benchmark.cpp  perf_target.cpp
demo/: CMakeLists.txt  coro_demo.cpp  demo.cpp  yield_demo.cpp
docs/: ARCHITECTURE.md  BUGFIX_STUCK_ISSUE.md  COROUTINE_TODO.md  README.md  coroutine-compiler-transform.md  coroutine-implementation.md  performance_history.md  performance_optimization.md  performance_results_2026-04-08.md  stack-switching.md  test_results_2026-04-08.md
docs/architecture/: butex.md  coroutine.md  generation.md  scheduler.md
docs/superpowers/plans/: 2026-03-25-m-n-thread-pool-additions.md  2026-03-25-m-n-thread-pool.md  2026-03-29-cpp20-coroutine-pool.md  2026-04-07-performance-optimization.md  2026-04-08-bthread-refactoring-plan.md  2026-04-09-allocation-optimization.md  2026-04-09-bthread-performance-optimization.md  2026-04-09-performance-phase3-optimization.md  2026-04-11-lockfree-queue-optimization.md  2026-04-12-comprehensive-performance-optimization.md  2026-04-12-condvar-event-lockfree.md  2026-04-12-pause-yield-optimization.md  2026-04-12-popfromhead-timeout-fix.md  2026-04-12-wait-optimization.md  2026-04-12-wake-store-optimization.md
docs/superpowers/specs/: 2026-03-24-m-n-thread-pool-design.md  2026-03-29-cpp20-coroutine-pool-design.md  2026-04-07-performance-optimization-design.md  2026-04-08-bthread-refactoring-design.md  2026-04-09-allocation-optimization-design.md  2026-04-11-lockfree-queue-optimization-design.md  2026-04-12-comprehensive-performance-optimization-design.md  2026-04-12-pause-yield-optimization-design.md  2026-04-12-phase7-optimization-design.md
include/: bthread.h  bthread.hpp
include/bthread/: api.hpp  butex.h  cond.h  global_queue.h  mutex.h  once.h  scheduler.h  task_group.h  task_meta.h  timer_thread.h  work_stealing_queue.h  worker.h
include/bthread/api/: config.hpp  once.hpp  spawn.hpp
include/bthread/core/: scheduler.hpp  task.hpp  task_group.hpp  task_meta.hpp  task_meta_base.hpp  worker.hpp
include/bthread/detail/: timer_thread.hpp
include/bthread/platform/: context.hpp  futex.hpp  platform.h  platform.hpp  platform_linux.h  platform_windows.h  stack.hpp
include/bthread/pool/: object_pool.hpp
include/bthread/queue/: execution_queue.hpp  global_queue.hpp  intrusive_waiter_queue.hpp  mpmc_queue.hpp  mpsc_queue.hpp  sharded_queue.hpp  shared_mpsc_queue.hpp  work_stealing_queue.hpp
include/bthread/sync/: butex.hpp  butex_queue.hpp  cond.hpp  event.hpp  mutex.hpp  waiter.hpp
include/coro/: cancel.h  cond.h  coroutine.h  frame_pool.h  meta.h  mutex.h  result.h  scheduler.h
pkg/mod/cache/download/golang.org/x/telemetry/config/@v/: v0.90.0.info  v0.90.0.ziphash
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/github.com/golang/vscode-go/: survey@v0.1.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/telemetry/: config@v0.90.0
pkg/mod/cache/download/sumdb/sum.golang.org/lookup/golang.org/x/tools/: gopls@v0.21.1
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x165/: 682
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x195/: 256
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x199/: 821
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x199/875.p/: 126
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/0/x199/895.p/: 204
pkg/mod/cache/download/sumdb/sum.golang.org/tile/8/1/780.p/: 195  215
pkg/sumdb/sum.golang.org/: latest
src/: bthread.cpp  butex.cpp  cond.cpp  execution_queue.cpp  global_queue.cpp  mutex.cpp  once.cpp  scheduler.cpp  task_group.cpp  task_meta.cpp  timer_thread.cpp  work_stealing_queue.cpp  worker.cpp
src/bthread/api/: once.cpp
src/bthread/core/: coro_support.cpp  scheduler.cpp  task.cpp  task_group.cpp  task_meta.cpp  worker.cpp
src/bthread/detail/: timer_thread.cpp
src/bthread/queue/: execution_queue.cpp  global_queue.cpp  mpmc_queue.cpp  sharded_queue.cpp  shared_mpsc_queue.cpp  work_stealing_queue.cpp
src/bthread/sync/: butex.cpp  butex_queue.cpp  cond.cpp  event.cpp  mutex.cpp
src/coro/: cancel.cpp  cond.cpp  coroutine.cpp  frame_pool.cpp  mutex.cpp  scheduler.cpp
src/platform/: context_linux_x64.S  context_windows_x64.asm  context_windows_x64_gcc.S  platform.cpp  platform_linux.cpp  platform_windows.cpp
tests/: CMakeLists.txt  bthread_test.cpp  butex_lazy_test.cpp  butex_test.cpp  cond_test.cpp  context_test.cpp  coroutine_test.cpp  debug_test.cpp  diag_mutex.cpp  exit_test.cpp  global_queue_debug.cpp  global_queue_test.cpp  idle_registry_test.cpp  minimal_scheduler_test.cpp  minimal_test.cpp  mpsc_queue_test.cpp  multi_test.cpp  mutex_bench_test.cpp  mutex_test.cpp  scheduler_test.cpp  sharded_queue_test.cpp  shared_mpsc_queue_test.cpp  simple_mutex_test.cpp  simple_test.cpp  stack_pool_test.cpp  stress_test.cpp  task_cache_test.cpp  task_group_test.cpp  test_headers.cpp  timer_shard_test.cpp  timer_test.cpp  wake_test.cpp  work_stealing_queue_test.cpp  worker_batch_test.cpp  xmm_test.cpp
tests/perf/: CMakeLists.txt  mpsc_perf_test.cpp
tests/pool/: CMakeLists.txt  object_pool_test.cpp
tests/sync/: CMakeLists.txt  mpmc_queue_test.cpp  waiter_queue_test.cpp
